<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal"
    android:layout_columnWeight="2"
    android:columnCount="2"
    android:rowCount="4"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:gravity="fill_horizontal"
        android:text="@string/StringText"
        android:textAlignment="center"
        android:textSize="35sp" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:gravity="fill_horizontal"
        android:text="@string/ButtonText"

        android:textAlignment="center"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:contentDescription="@string/StringText"
        app:srcCompat="@drawable/flag" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/Checkbox"
        android:textAlignment="center" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/SwitchText"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editText"
        android:textAlignment="center"
        android:textSize="25sp" />

</GridLayout>